- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    6.0
- 
        31afb6b70513cc673d17fc72f081f19ac80e7111 (qt/qtdeclarative/dev)
When building with llvm on Windows:
agent:2020/11/19 08:19:15 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:108:13: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:15 build.go:379: qmlWarning(nullptr) << QStringLiteral("Can't assign to existing role '%1' of different type [%2 -> %3]").arg(r.name).arg(roleTypeName(type)).arg(roleTypeName(r.type)); agent:2020/11/19 08:19:15 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:15 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:15 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:15 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:15 build.go:379: ^ agent:2020/11/19 08:19:15 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:121:13: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:15 build.go:379: qmlWarning(nullptr) << QStringLiteral("Can't assign to existing role '%1' of different type [%2 -> %3]").arg(r.name).arg(roleTypeName(type)).arg(roleTypeName(r.type)); agent:2020/11/19 08:19:15 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:15 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:15 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:15 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:15 build.go:379: ^ agent:2020/11/19 08:19:15 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:251:9: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:15 build.go:379: qmlWarning(nullptr) << "Can't create role for unsupported data type"; agent:2020/11/19 08:19:15 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:15 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:15 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:15 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:15 build.go:379: ^ agent:2020/11/19 08:19:15 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:718:17: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:15 build.go:379: qmlWarning(nullptr, err); agent:2020/11/19 08:19:15 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:15 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:15 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:63:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:15 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me, const QQmlError &error); agent:2020/11/19 08:19:15 build.go:379: ^ agent:2020/11/19 08:19:15 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:1509:13: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:15 build.go:379: qmlWarning(nullptr) << QStringLiteral("Can't assign to existing role '%1' of different type [%2 -> %3]").arg(role.name).arg(roleTypeName(role.type)).arg(roleTypeName(ListLayout::Role::List)); agent:2020/11/19 08:19:15 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:15 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:15 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:15 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:15 build.go:379: ^ agent:2020/11/19 08:19:15 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2337:17: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:15 build.go:379: qmlWarning(this) << tr("unable to enable dynamic roles as this model is not empty"); agent:2020/11/19 08:19:15 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:15 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:15 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:15 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:15 build.go:379: ^ agent:2020/11/19 08:19:15 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2342:17: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:15 build.go:379: qmlWarning(this) << tr("unable to enable static roles as this model is not empty"); agent:2020/11/19 08:19:15 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:15 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:15 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:15 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:15 build.go:379: ^ agent:2020/11/19 08:19:15 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2348:9: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:15 build.go:379: qmlWarning(this) << tr("dynamic role setting must be made from the main thread, before any worker scripts are created"); agent:2020/11/19 08:19:15 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:15 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:15 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:15 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:15 build.go:379: ^ agent:2020/11/19 08:19:15 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2390:13: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:15 build.go:379: qmlWarning(this) << tr("remove: indices [%1 - %2] out of range [0 - %3]").arg(index).arg(index+removeCount).arg(count()); agent:2020/11/19 08:19:15 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:15 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:15 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:15 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:15 build.go:379: ^ agent:2020/11/19 08:19:15 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2396:9: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:15 build.go:379: qmlWarning(this) << tr("remove: incorrect number of arguments"); agent:2020/11/19 08:19:15 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:15 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:15 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:15 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:15 build.go:379: ^ agent:2020/11/19 08:19:15 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2455:13: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:15 build.go:379: qmlWarning(this) << tr("insert: index %1 out of range").arg(index); agent:2020/11/19 08:19:15 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:15 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:15 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:15 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:15 build.go:379: ^ agent:2020/11/19 08:19:15 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2487:13: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:15 build.go:379: qmlWarning(this) << tr("insert: value is not an object"); agent:2020/11/19 08:19:15 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:15 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:15 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:16 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:16 build.go:379: ^ agent:2020/11/19 08:19:16 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2490:9: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:16 build.go:379: qmlWarning(this) << tr("insert: value is not an object"); agent:2020/11/19 08:19:16 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:16 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:16 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:16 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:16 build.go:379: ^ agent:2020/11/19 08:19:16 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2513:9: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:16 build.go:379: qmlWarning(this) << tr("move: out of range"); agent:2020/11/19 08:19:16 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:16 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:16 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:16 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:16 build.go:379: ^ agent:2020/11/19 08:19:16 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2605:13: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:16 build.go:379: qmlWarning(this) << tr("append: value is not an object"); agent:2020/11/19 08:19:16 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:16 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:16 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:16 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:16 build.go:379: ^ agent:2020/11/19 08:19:16 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2608:9: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:16 build.go:379: qmlWarning(this) << tr("append: value is not an object"); agent:2020/11/19 08:19:16 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:16 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:16 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:16 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:16 build.go:379: ^ agent:2020/11/19 08:19:16 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2691:9: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:16 build.go:379: qmlWarning(this) << tr("set: value is not an object"); agent:2020/11/19 08:19:16 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:16 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:16 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:16 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:16 build.go:379: ^ agent:2020/11/19 08:19:16 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2695:9: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:16 build.go:379: qmlWarning(this) << tr("set: index %1 out of range").arg(index); agent:2020/11/19 08:19:16 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:16 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:16 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:16 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:16 build.go:379: ^ agent:2020/11/19 08:19:16 build.go:379: /Users/qt/work/qt/qtdeclarative/src/qmlmodels/qqmllistmodel.cpp:2741:9: error: use of undeclared identifier 'qmlWarning'; did you mean 'QtQml::qmlWarning'? agent:2020/11/19 08:19:16 build.go:379: qmlWarning(this) << tr("set: index %1 out of range").arg(index); agent:2020/11/19 08:19:16 build.go:379: ^~~~~~~~~~ agent:2020/11/19 08:19:16 build.go:379: QtQml::qmlWarning agent:2020/11/19 08:19:16 build.go:379: include/QtQml/../../src/qml/qml/qqmlinfo.h:62:27: note: 'QtQml::qmlWarning' declared here agent:2020/11/19 08:19:16 build.go:379: Q_QML_EXPORT QQmlInfo qmlWarning(const QObject *me); agent:2020/11/19 08:19:16 build.go:379: ^ agent:2020/11/19 08:19:16 build.go:379: fatal error: too many errors emitted, stopping now [-ferror-limit=]
- is required for
- 
                    QTQAINFRA-2139 Build Qt with clang on windows -         
- Closed
 
-