src/qml/qml/qqmlinfo.cpp
@@ -248,8 +248,6 @@ QQmlInfo::~QQmlInfo()
     }
 }
 
-namespace QtQml {
-
 #define MESSAGE_FUNCS(FuncName, MessageLevel) \
     QQmlInfo FuncName(const QObject *me) \
     { \
@@ -275,29 +273,5 @@ namespace QtQml {
 MESSAGE_FUNCS(qmlDebug, QtMsgType::QtDebugMsg)
 MESSAGE_FUNCS(qmlInfo, QtMsgType::QtInfoMsg)
 MESSAGE_FUNCS(qmlWarning, QtMsgType::QtWarningMsg)
-
-
-} // namespace QtQml
-
-#if QT_DEPRECATED_SINCE(5, 1)
-
-// Also define symbols outside namespace to keep binary compatibility with Qt 5.0
-
-QQmlInfo qmlInfo(const QObject *me)
-{
-    return QtQml::qmlInfo(me);
-}
-
-QQmlInfo qmlInfo(const QObject *me, const QQmlError &error)
-{
-    return QtQml::qmlInfo(me, error);
-}
-
-QQmlInfo qmlInfo(const QObject *me, const QList<QQmlError> &errors)
-{
-    return QtQml::qmlInfo(me, errors);
-}
-
-#endif // QT_DEPRECATED_SINCE(5, 1)
 
 QT_END_NAMESPACE
